--- a/Miko'sDemo/Base.lproj/Main.storyboard
+++ b/Miko'sDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -100,6 +100,7 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
+                        <segue destination="w7E-mQ-nmS" kind="relationship" relationship="viewControllers" id="sam-KF-fKT"/>
                         <segue destination="lcO-8A-bbt" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="xJp-Z0-zp0" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                     </connections>
@@ -108,11 +109,30 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
-        <!--First-->
+        <!--首页-->
+        <scene sceneID="AvI-tw-5RT">
+            <objects>
+                <viewController id="piB-Vg-K9C" customClass="MainViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1fP-vo-AsO"/>
+                        <viewControllerLayoutGuide type="bottom" id="ube-An-oW9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Vvg-XI-9OB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="首页" id="5Wu-Lf-B5P"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HRy-cr-WMC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1719.2" y="-1040.3298350824589"/>
+        </scene>
+        <!--时间流-->
         <scene sceneID="Ruu-s7-Wyu">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lcO-8A-bbt" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="时间流" image="time" id="acW-dT-cKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="uiY-S9-5mi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -127,11 +147,11 @@
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
-        <!--Second-->
+        <!--关于-->
         <scene sceneID="2si-6A-tGr">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xJp-Z0-zp0" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="关于" image="setting" id="cPa-gy-q4n"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="GG0-Eh-3j8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -146,9 +166,29 @@
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="359.37031484257875"/>
         </scene>
+        <!--首页-->
+        <scene sceneID="8Ei-Ge-rh4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w7E-mQ-nmS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="首页" image="home" id="jW8-oz-V0V"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1fq-J8-VbO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="piB-Vg-K9C" kind="relationship" relationship="rootViewController" id="tk0-Qh-qGX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LfF-9V-y2P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="780" y="-1040.3298350824589"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="home" width="30" height="30"/>
+        <image name="setting" width="30" height="30"/>
+        <image name="time" width="30" height="30"/>
     </resources>
 </document>
